# SQLearn

./: .gitignore  CMakeLists.txt  README.md
src/: camerarecognition.cpp  camerarecognition.h  databasemanager.cpp  databasemanager.h  dnnmodel.cpp  dnnmodel.h  imageprocessor.cpp  imageprocessor.h  main.cpp  neuralnetwork.h
